[tool.poetry]
name = "python-draft-repo"
version = "0.1.0"
description = ""
authors = ["David Asaf <david.asaf@torqata.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
typer = {extras = ["all"], version = "^0.4.0"}
black = "^22.1.0"
pylint = "^2.12.2"
mypy = "^0.931"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
